# AudioPlayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml  prewarm-vcpkg-cache.yml  prewarm-vcpkg-cache_1.yml  release.yml
assets/: README.md
docs/: audio-processing-transcoding-phase3-verification.md  mvvm-widgets-architecture.md  playback-core-phase1-verification.md  playback-rate-eq-phase-verification.md  playlist-core-phase2-verification.md
src/: main.cpp
src/App/: AppCompositionRoot.cpp  AppCompositionRoot.h  MainWindowPart.cpp  MainWindowPart.h  widgets_main.cpp
src/Common/: ViewCommand.cpp  ViewCommand.h
src/Model/: AudioFile.cpp  AudioFile.h  FileScanner.cpp  FileScanner.h  JsonLibraryDocumentRepository.cpp  JsonLibraryDocumentRepository.h  JsonSongRepository.cpp  JsonSongRepository.h  LibraryDocument.cpp  LibraryDocument.h  LibraryPlaylist.cpp  LibraryPlaylist.h  PlayList.cpp  PlayList.h  ProcessingTask.cpp  ProcessingTask.h  ProcessingTypes.cpp  ProcessingTypes.h  README.md
src/Model/Service/: AudioEffectsTypes.cpp  AudioEffectsTypes.h  AudioEffectsUseCase.cpp  AudioEffectsUseCase.h  FfmpegTranscodingBackend.cpp  FfmpegTranscodingBackend.h  GStreamerEffectsPlaybackBackend.cpp  GStreamerEffectsPlaybackBackend.h  IAudioEffectsService.h  IPlaybackService.h  ITranscodingBackend.h  LibraryUseCase.cpp  LibraryUseCase.h  NullAudioEffectsService.cpp  NullAudioEffectsService.h  NullPlaybackService.cpp  NullPlaybackService.h  PlaybackTypes.h  PlaybackUseCase.cpp  PlaybackUseCase.h  PlaylistCollectionUseCase.cpp  PlaylistCollectionUseCase.h  ProcessingPlaylistIntegrationService.cpp  ProcessingPlaylistIntegrationService.h  ProcessingUseCase.cpp  ProcessingUseCase.h  QtMultimediaPlaybackService.cpp  QtMultimediaPlaybackService.h  TranscodedPlaylistService.cpp  TranscodedPlaylistService.h
src/Utils/: README.md
src/View/: Main.qml  MainWindow.cpp  MainWindow.h
src/ViewModel/: AudioEffectsViewModel.cpp  AudioEffectsViewModel.h  AudioEffectsViewModelProtocol.h  LibraryViewModel.cpp  LibraryViewModel.h  LibraryViewModelProtocol.h  PlaybackState.h  PlaybackViewModel.cpp  PlaybackViewModel.h  PlaybackViewModelProtocol.h  PlaylistCollectionViewModel.cpp  PlaylistCollectionViewModel.h  PlaylistCollectionViewModelProtocol.h  PlaylistListModel.cpp  PlaylistListModel.h  ProcessingTaskListModel.cpp  ProcessingTaskListModel.h  ProcessingViewModel.cpp  ProcessingViewModel.h  ProcessingViewModelProtocol.h  README.md  ShellViewModel.cpp  ShellViewModel.h  SongListModel.cpp  SongListModel.h
storage/: README.md
test/: CMakeLists.txt  architecture_boundary_test.cpp  audio_effects_types_test.cpp  audio_effects_usecase_test.cpp  audio_effects_viewmodel_test.cpp  ffmpeg_transcoding_backend_test.cpp  gstreamer_effects_backend_test.cpp  json_library_document_repository_test.cpp  library_document_model_test.cpp  library_usecase_test.cpp  model_behavior_test.cpp  null_audio_effects_service_test.cpp  playback_composition_test.cpp  playback_service_contract_test.cpp  playback_usecase_test.cpp  playback_viewmodel_test.cpp  playlist_collection_usecase_test.cpp  playlist_collection_viewmodel_test.cpp  processing_task_model_test.cpp  processing_usecase_test.cpp  processing_viewmodel_test.cpp  qt_multimedia_playback_service_test.cpp  skeleton_test.cpp  transcoded_playlist_service_test.cpp  transcoding_backend_contract_test.cpp  viewmodel_behavior_test.cpp
tools/: gstreamer_effects_probe.cpp
